- Updates to delegate container